# standup_generator

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.py
src/standup_generator/: main.py
