[tool.poetry]
name = "standup_generator"
version = "0.1.0"
description = "A template Python project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "standup_generator", from="src"}
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
standup_generator = "standup_generator.main:main"