[tool.poetry]
name = "standup_generator"
version = "0.1.0"
description = "A template Python project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "standup_generator", from="src"}
]

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.31"
openai = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
standup_generator = "standup_generator.main:main"